增加前缀树的规则查找

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,11 @@ project(main)
 aux_source_directory(./src SRC_LIST)
 
 # add_compile_options(-std=c++11) #c99支持for循环内初始化变量
+link_directories(/usr/lib64/mysql)
 
 add_executable(main ${SRC_LIST}) # 注意用的花括号
 add_definitions(-D _DEBUG)
 
 include(FindPCAP.cmake)
-target_link_libraries(main ${PCAP_LIBRARY})
+target_link_libraries(main ${PCAP_LIBRARY} mysqlclient pthread)
 
